--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -42,14 +42,14 @@ body.sticky-bottom-footer {
 
 // Tighten about page header
 .post-header {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 
   .post-title {
-    margin-bottom: 0.2rem;
+    margin-bottom: 0.1rem;
   }
 
   .desc {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
   }
 }
 
